# FinOps-Optimized-GraphRAG

./: .env.example  .gitignore  Dockerfile  README.md  build-and-serve.sh  docker-compose.yml  pyproject.toml  start-dev.sh
data/: sample.txt  sample2.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
infra/: AWS_DEPLOY.md  ec2-bootstrap.sh
src/: ingest.py  ingest_folder.py  query.py  rag_engine.py  server.py  tokenizer.py
